--- a/web/aboutUs.xhtml
+++ b/web/aboutUs.xhtml
@@ -6,15 +6,16 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <title>Inicio</title>
+    <link rel="stylesheet" href="css/styles.css"/>
 </h:head>
 <h:body>
     <header>
         <b:navBar brand="TouristTravel" brandHref="#">
-            <b:navbarLinks>
+            <b:navbarLinks id="menu-nav">
                 <b:navLink value="Home" href="index.xhtml"></b:navLink>
                 <b:navLink value="About Us" href="aboutUs.xhtml"></b:navLink>
                 <b:navLink value="Travel" href="travel.xhtml"></b:navLink>
-                <b:navLink value="Contact Us" href="#"></b:navLink>
+                <b:navLink value="Contact Us" href="contactUs.xhtml"></b:navLink>
             </b:navbarLinks>
         </b:navBar>
     </header>
@@ -75,7 +76,31 @@
         </b:container>
     </main>
     <footer>
-
+        <div id="footer_1">
+            <b:container>
+                <b:row>
+                    <p>Lima, Perú Lun - Vie 9:30 a 18:00hrs</p>
+                </b:row>
+            </b:container>
+        </div>
+        <div id="footer_2">
+            <b:container>
+                <b:row>
+                    <p>Siguenos en:</p>
+                    <ul>
+                        <li><img src="image/Facebook-icon.png"/> Facebook</li>
+                        <li><img src="image/icon-twitter.png"/> Twiiter</li>
+                    </ul>
+                </b:row>
+            </b:container>
+        </div>
+        <div id="footer_3">
+            <b:container>
+                <b:row>
+                    <p>© Copyright 2015 Cuponatic.com Todos los derechos reservados.</p>
+                </b:row>
+            </b:container>
+        </div>
     </footer>
 </h:body>
 </html>
