--- a/web/contactUs.xhtml
+++ b/web/contactUs.xhtml
@@ -6,21 +6,103 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <title>Inicio</title>
+    <link rel="stylesheet" href="css/styles.css"/>
 </h:head>
 <h:body>
-<header>
-    <b:navBar brand="TouristTravel" brandHref="#">
-        <b:navbarLinks>
-            <b:navLink value="Home" href="index.xhtml"></b:navLink>
-            <b:navLink value="About Us" href="aboutUs.xhtml"></b:navLink>
-            <b:navLink value="Travel" href="travel.xhtml"></b:navLink>
-            <b:navLink value="Contact Us" href="#"></b:navLink>
-        </b:navbarLinks>
-    </b:navBar>
-</header>
-<main>
-<b:container>
+    <header>
+        <b:navBar brand="TouristTravel" brandHref="#">
+            <b:navbarLinks id="menu-nav">
+                <b:navLink value="Home" href="index.xhtml"></b:navLink>
+                <b:navLink value="About Us" href="aboutUs.xhtml"></b:navLink>
+                <b:navLink value="Travel" href="travel.xhtml"></b:navLink>
+                <b:navLink value="Contact Us" href="contactUs.xhtml"></b:navLink>
+            </b:navbarLinks>
+        </b:navBar>
+    </header>
+    <main>
+        <b:container>
+            <b:row>
+                <b:column col-sm="6" col-md="4">
+                    <b:thumbnail>
+                        <img src="image/oficina.jpg" alt="Generic placeholder thumbnail"/>
+                        <f:facet name="caption">
+                            <h3>Thumbnail label</h3>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <p>
+                                <b:button look="primary" value="Button"/>
+                                <b:button value="Button"/>
+                            </p>
+                        </f:facet>
+                    </b:thumbnail>
+                </b:column>
+                <b:column col-sm="6" col-md="4">
+                    <b:thumbnail>
+                        <img src="image/oficina.jpg" alt="Generic placeholder thumbnail"/>
+                        <f:facet name="caption">
+                            <h3>Thumbnail label</h3>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <p>
+                                <b:button look="primary" value="Button"/>
+                                <b:button value="Button"/>
+                            </p>
+                        </f:facet>
+                    </b:thumbnail>
+                </b:column>
+                <b:column col-sm="6" col-md="4">
+                    <b:thumbnail>
+                        <img src="image/oficina.jpg" alt="Generic placeholder thumbnail"/>
+                        <f:facet name="caption">
+                            <h3>Thumbnail label</h3>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <p>
+                                <b:button look="primary" value="Button"/>
+                                <b:button value="Button"/>
+                            </p>
+                        </f:facet>
+                    </b:thumbnail>
+                </b:column>
+                <h:form styleClass="col-md-6">
+                    <h:outputLabel for="lastname" value="Lastname"/>
+                    <b:inputText id="lastname" required="true"/>
+                    <h:outputLabel for="firstname" value="Firstname"/>
+                    <b:inputText id="firstname" required="true"/>
+                    <h:outputLabel for="email" value="e-mail"/>
+                    <b:inputText id="email" required="true"/>
+                    <h:outputLabel for="number" value="Number Telephone"/>
+                    <b:inputText type="number" id="number"/>
+                    <h:outputLabel for="coment" value="Comentary"/>
+                    <b:inputTextarea id="coment"/>
+                    <b:commandButton value="Buy" onclick="ajax:loginBean.login2()"/>
+                </h:form>
+            </b:row>
         </b:container>
-</main>
+    </main>
+    <footer>
+        <div id="footer_1">
+            <b:container>
+                <b:row>
+                    <p>Lima, Perú Lun - Vie 9:30 a 18:00hrs</p>
+                </b:row>
+            </b:container>
+        </div>
+        <div id="footer_2">
+            <b:container>
+                <b:row>
+                    <p>Siguenos en:</p>
+                    <ul>
+                        <li><img src="image/Facebook-icon.png"/> Facebook</li>
+                        <li><img src="image/icon-twitter.png"/> Twiiter</li>
+                    </ul>
+                </b:row>
+            </b:container>
+        </div>
+        <div id="footer_3">
+            <b:container>
+                <b:row>
+                    <p>© Copyright 2015 Cuponatic.com Todos los derechos reservados.</p>
+                </b:row>
+            </b:container>
+        </div>
+    </footer>
 </h:body>
 </html>
