Se esta guardando los cambios hasta aca. Listo.

--- a/web/aboutUs.xhtml
+++ b/web/aboutUs.xhtml
@@ -22,8 +22,9 @@
     <main>
         <b:container>
             <b:row>
+                <h2 class="col-md-12">Our company</h2>
                 <div class="col-md-9">
-                    <h2>Our company</h2>
+
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere iusto laborum temporibus ullam
                         vero! Dolore ea odio quae quaerat quam quod repellat vel veniam. Doloribus hic laboriosam
                         molestiae necessitatibus sapiente!</p>
@@ -44,32 +45,32 @@
                 </div>
             </b:row>
             <b:row>
-                <div class="col-md-4">
-                    <div>
+                <div class="col-md-4 redondear">
+                    <figure>
                         <img src="image/user.png" alt="Generic placeholder thumbnail"/>
-                    </div>
-                    <div>
-                        <p>Lucho Morales</p>
-                        <p>Jefe Comercial</p>
-                    </div>
+                        <figcaption>
+                            <p>Lucho Morales</p>
+                            <p>Jefe Comercial</p>
+                        </figcaption>
+                    </figure>
                 </div>
-                <div class="col-md-4">
-                    <div>
+                <div class="col-md-4 redondear">
+                    <figure>
                         <img src="image/user.png" alt="Generic placeholder thumbnail"/>
-                    </div>
-                    <div>
-                        <p>Lucho Morales</p>
-                        <p>Jefe Comercial</p>
-                    </div>
+                        <figcaption>
+                            <p>Lucho Morales</p>
+                            <p>Jefe Comercial</p>
+                        </figcaption>
+                    </figure>
                 </div>
-                <div class="col-md-4">
-                    <div>
+                <div class="col-md-4 redondear">
+                    <figure>
                         <img src="image/user.png" alt="Generic placeholder thumbnail"/>
-                    </div>
-                    <div>
-                        <p>Lucho Morales</p>
-                        <p>Jefe Comercial</p>
-                    </div>
+                        <figcaption>
+                            <p>Lucho Morales</p>
+                            <p>Jefe Comercial</p>
+                        </figcaption>
+                    </figure>
                 </div>
             </b:row>
 
