--- a/web/traveldetails.xhtml
+++ b/web/traveldetails.xhtml
@@ -5,6 +5,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <title>Travel Details</title>
+    <link rel="stylesheet" href="css/styles.css"/>
 </h:head>
 <h:body>
     <header>
