Se esta guardando los cambios hasta aca. Listo.

--- a/web/traveldetails.xhtml
+++ b/web/traveldetails.xhtml
@@ -21,8 +21,8 @@
     <main>
         <b:container>
             <b:row>
+                <h2 class="col-md-12">Our company</h2>
                 <div class="col-md-9">
-                    <h2>Our company</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere iusto laborum temporibus ullam
                         vero! Dolore ea odio quae quaerat quam quod repellat vel veniam. Doloribus hic laboriosam
                         molestiae necessitatibus sapiente!</p>
