--- a/web/contactUs.xhtml
+++ b/web/contactUs.xhtml
@@ -52,23 +52,27 @@
                     </b:column>
                 </b:column>
                 <b:column>
-                    <h:form styleClass="col-md-6">
-                        <h2>Enviar Informacion</h2>
-                        <h:outputLabel for="lastname" value="Lastname"/>
-                        <b:inputText id="lastname" required="true"/>
-                        <h:outputLabel for="firstname" value="Firstname"/>
-                        <b:inputText id="firstname" required="true"/>
-                        <h:outputLabel for="email" value="e-mail"/>
-                        <b:inputText id="email" required="true"/>
-                        <h:outputLabel for="number" value="Number Telephone"/>
-                        <b:inputText type="number" id="number"/>
-                        <h:outputLabel for="coment" value="Comentary"/>
-                        <b:inputTextarea id="coment"/>
-                        <b:commandButton value="Buy" onclick="ajax:loginBean.login2()"/>
-                    </h:form>
-                    <b:column col-md="6">
+                    <b:column span="6">
+                        <b:panel>
+                            <h2>Enviar Informacion</h2>
+                            <h:form>
+                                <h:outputLabel for="lastname" value="Lastname"/>
+                                <b:inputText id="lastname" required="true"/>
+                                <h:outputLabel for="firstname" value="Firstname"/>
+                                <b:inputText id="firstname" required="true"/>
+                                <h:outputLabel for="email" value="e-mail"/>
+                                <b:inputText id="email" required="true"/>
+                                <h:outputLabel for="number" value="Number Telephone"/>
+                                <b:inputText type="number" id="number"/>
+                                <h:outputLabel for="coment" value="Comentary"/>
+                                <b:inputTextarea id="coment"/>
+                                <b:commandButton value="Buy" onclick="ajax:loginBean.login2()"/>
+                            </h:form>
+                        </b:panel>
+                    </b:column>
+                    <b:column span="6">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3901.5027309215307!2d-76.985102185568!3d-12.077696945764103!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c64961d29641%3A0x663deea35b3ca57!2sGarcilazo+De+La+Vega+767%2C+Distrito+de+Lima+15022!5e0!3m2!1ses!2spe!4v1469260688846"
-                                width="600" height="450" frameborder="0" style="border:0"></iframe>
+                                width="100%" height="450" frameborder="0" style="border:0"></iframe>
                     </b:column>
                 </b:column>
             </b:row>
