--- a/web/aboutUs.xhtml
+++ b/web/aboutUs.xhtml
@@ -38,7 +38,7 @@
                         consequatur culpa eos esse est illo placeat praesentium quam qui reiciendis repellat
                         repellendus, similique sunt tenetur vero. Iste?</p>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3" id="presentacion">
                     <figure>
                         <b:image value="image/preview_4.jpg" style="max-width:100%;"/>
                     </figure>
@@ -58,8 +58,8 @@
                     <figure>
                         <img src="image/user.png" alt="Generic placeholder thumbnail"/>
                         <figcaption>
-                            <p>Lucho Morales</p>
-                            <p>Jefe Comercial</p>
+                            <p>Gustavo Rivero</p>
+                            <p>Gerente Comercial</p>
                         </figcaption>
                     </figure>
                 </div>
@@ -67,8 +67,8 @@
                     <figure>
                         <img src="image/user.png" alt="Generic placeholder thumbnail"/>
                         <figcaption>
-                            <p>Lucho Morales</p>
-                            <p>Jefe Comercial</p>
+                            <p>Sasha Gray</p>
+                            <p>Secretaria</p>
                         </figcaption>
                     </figure>
                 </div>
@@ -80,25 +80,33 @@
         <div id="footer_1">
             <b:container>
                 <b:row>
-                    <p>Lima, Perú Lun - Vie 9:30 a 18:00hrs</p>
+                    <b:column span="12">
+                        <p>Lima, Perú Lun - Vie 9:30 a 18:00hrs</p>
+                    </b:column>
                 </b:row>
             </b:container>
         </div>
         <div id="footer_2">
             <b:container>
                 <b:row>
-                    <p>Siguenos en:</p>
-                    <ul>
-                        <li><img src="image/Facebook-icon.png"/> Facebook</li>
-                        <li><img src="image/icon-twitter.png"/> Twiiter</li>
-                    </ul>
+                    <b:column span="6">
+                        <p>Term and Conditions</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci asperiores assumenda commodi dignissimos dolore, dolorum ea exercitationem id nisi non, optio qui quo quod recusandae sint, sunt unde vero.</p>
+                    </b:column>
+                    <b:column span="6">
+                        <p>Follow us on:</p>
+                        <ul>
+                            <li><img src="image/Facebook-icon.png"/> Facebook</li>
+                            <li><img src="image/icon-twitter.png"/> Twiiter</li>
+                        </ul>
+                    </b:column>
                 </b:row>
             </b:container>
         </div>
         <div id="footer_3">
             <b:container>
                 <b:row>
-                    <p>© Copyright 2015 Cuponatic.com Todos los derechos reservados.</p>
+                    <p>© Copyright 2016 TouristTravel Todos los derechos reservados.</p>
                 </b:row>
             </b:container>
         </div>
