--- a/web/contactUs.xhtml
+++ b/web/contactUs.xhtml
@@ -54,7 +54,7 @@
                 <b:column>
                     <b:column span="6">
                         <b:panel>
-                            <h2>Enviar Informacion</h2>
+                            <h2>Send Information</h2>
                             <h:form>
                                 <h:outputLabel for="lastname" value="Lastname"/>
                                 <b:inputText id="lastname" required="true"/>
@@ -82,25 +82,33 @@
         <div id="footer_1">
             <b:container>
                 <b:row>
-                    <p>Lima, Perú Lun - Vie 9:30 a 18:00hrs</p>
+                    <b:column span="12">
+                        <p>Lima, Perú Lun - Vie 9:30 a 18:00hrs</p>
+                    </b:column>
                 </b:row>
             </b:container>
         </div>
         <div id="footer_2">
             <b:container>
                 <b:row>
-                    <p>Siguenos en:</p>
-                    <ul>
-                        <li><img src="image/Facebook-icon.png"/> Facebook</li>
-                        <li><img src="image/icon-twitter.png"/> Twiiter</li>
-                    </ul>
+                    <b:column span="6">
+                        <p>Term and Conditions</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci asperiores assumenda commodi dignissimos dolore, dolorum ea exercitationem id nisi non, optio qui quo quod recusandae sint, sunt unde vero.</p>
+                    </b:column>
+                    <b:column span="6">
+                        <p>Follow us on:</p>
+                        <ul>
+                            <li><img src="image/Facebook-icon.png"/> Facebook</li>
+                            <li><img src="image/icon-twitter.png"/> Twiiter</li>
+                        </ul>
+                    </b:column>
                 </b:row>
             </b:container>
         </div>
         <div id="footer_3">
             <b:container>
                 <b:row>
-                    <p>© Copyright 2015 Cuponatic.com Todos los derechos reservados.</p>
+                    <p>© Copyright 2016 TouristTravel Todos los derechos reservados.</p>
                 </b:row>
             </b:container>
         </div>
