--- a/web/travel.xhtml
+++ b/web/travel.xhtml
@@ -21,47 +21,22 @@
     </header>
     <main>
         <b:container>
-            <b:row>
+            <b:row >
                 <b:column span="8">
-                    <b:column span="4">
-                        <b:thumbnail>
-                            <b:image value="image/location.jpg" alt="Location1"/>
-                            <f:facet name="caption">
-                                <h3>Thumbnail label</h3>
-                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                                <p>
-                                    <b:navCommandLink look="primary" value="More Information"
-                                                      href="traveldetails.xhtml"/>
-                                </p>
-                            </f:facet>
-                        </b:thumbnail>
-                    </b:column>
-                    <b:column span="4">
-                        <b:thumbnail>
-                            <img src="image/preview_3.jpg" alt="Location1"/>
-                            <f:facet name="caption">
-                                <h3>Thumbnail label</h3>
-                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                                <p>
-                                    <b:navCommandLink look="primary" value="More Information"
-                                                      href="traveldetails.xhtml"/>
-                                </p>
-                            </f:facet>
-                        </b:thumbnail>
-                    </b:column>
-                    <b:column span="4">
-                        <b:thumbnail>
-                            <img src="image/preview_1.jpg" alt="Location1"/>
-                            <f:facet name="caption">
-                                <h3>Thumbnail label</h3>
-                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                                <p>
-                                    <b:navCommandLink look="primary" value="More Information"
-                                                      href="traveldetails.xhtml"/>
-                                </p>
-                            </f:facet>
-                        </b:thumbnail>
-                    </b:column>
+                    <h:dataTable value="#{hrservicefacade.countries}" var="dos" id="main">
+                        <h:column >
+                            <b:thumbnail>
+                                <img src="image/countries/#{dos.countryid}.jpg"/>
+                                <f:facet name="caption">
+                                    <h3>#{dos.countryname}</h3>
+                                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                                    <h:link value="Detail" outcome="traveldetails.xhtml" includeViewParams="true">
+                                        <f:param  name="id" value="#{dos.countryid}"/>
+                                    </h:link>
+                                </f:facet>
+                            </b:thumbnail>
+                        </h:column>
+                    </h:dataTable>
                 </b:column>
                 <b:column span="4">
                     <b:panel>
@@ -76,51 +51,6 @@
                             <b:commandButton update="" value="Search"/>
                         </h:form>
                     </b:panel>
-                </b:column>
-            </b:row>
-            <b:row>
-                <b:column span="8">
-                    <b:column span="4">
-                        <b:thumbnail>
-                            <b:image value="image/preview_4.jpg" alt="Location1"/>
-                            <f:facet name="caption">
-                                <h3>Thumbnail label</h3>
-                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                                <p>
-                                    <b:navCommandLink look="primary" value="More Information"
-                                                      href="traveldetails.xhtml"/>
-                                </p>
-                            </f:facet>
-                        </b:thumbnail>
-                    </b:column>
-                    <b:column span="4">
-                        <b:thumbnail>
-                            <img src="image/preview_5.jpg" alt="Location1"/>
-                            <f:facet name="caption">
-                                <h3>Thumbnail label</h3>
-                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                                <p>
-                                    <b:navCommandLink look="primary" value="More Information"
-                                                      href="traveldetails.xhtml"/>
-                                </p>
-                            </f:facet>
-                        </b:thumbnail>
-                    </b:column>
-                    <b:column span="4">
-                        <b:thumbnail>
-                            <img src="image/preview_6.jpg" alt="Location1"/>
-                            <f:facet name="caption">
-                                <h3>Thumbnail label</h3>
-                                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                                <p>
-                                    <b:navCommandLink look="primary" value="More Information"
-                                                      href="traveldetails.xhtml"/>
-                                </p>
-                            </f:facet>
-                        </b:thumbnail>
-                    </b:column>
-                </b:column>
-                <b:column span="4">
                 </b:column>
             </b:row>
         </b:container>
