--- a/web/travel.xhtml
+++ b/web/travel.xhtml
@@ -29,7 +29,7 @@
                                 <img src="image/countries/#{dos.countryid}.jpg"/>
                                 <f:facet name="caption">
                                     <h3>#{dos.countryname}</h3>
-                                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                                    <p>#{dos.description}</p>
                                     <h:link value="Detail" outcome="traveldetails.xhtml" includeViewParams="true">
                                         <f:param  name="id" value="#{dos.countryid}"/>
                                     </h:link>
