--- a/web/traveldetails.xhtml
+++ b/web/traveldetails.xhtml
@@ -84,10 +84,10 @@
         <div id="footer_2">
             <b:container>
                 <b:row>
-                    <b:column span="6">
-                        <p>Term and Conditions</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci asperiores assumenda commodi dignissimos dolore, dolorum ea exercitationem id nisi non, optio qui quo quod recusandae sint, sunt unde vero.</p>
-                    </b:column>
+                    <b:column span="6" id="enlace">
+                        <h:link value="Term and Conditions" outcome="terminos-condiciones.xhtml" >
+                        </h:link>
+                    </b:column>ss
                     <b:column span="6">
                         <p>Follow us on:</p>
                         <ul>
